--- a/p3_projeto_banco_AQUILES_RODRIGUES/.project
+++ b/p3_projeto_banco_AQUILES_RODRIGUES/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>p3_projeto_banco_AQUILES_RODRIGUES</name>
+	<name>digital_bank_project</name>
 	<comment></comment>
 	<projects>
 	</projects>
